--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
+    "@jfschmiechen/react-event-calendar": "^0.2.7",
+    "antd": "^3.26.2",
+    "aws-amplify": "^2.2.0",
+    "babel-plugin-import": "^1.13.0",
+    "core-js": "^3.5.0",
     "react": "^16.12.0",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.12.0",
+    "react-router-bootstrap": "^0.24.4",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "3.3.0"
   },
   "scripts": {
