--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@fortawesome/react-fontawesome": "^0.1.8",
     "@jfschmiechen/react-event-calendar": "^0.2.7",
-    "antd": "^3.26.2",
     "aws-amplify": "^2.2.0",
-    "babel-plugin-import": "^1.13.0",
     "core-js": "^3.5.0",
     "react": "^16.12.0",
     "react-bootstrap": "^0.32.1",
@@ -35,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.12.0"
   }
 }
