--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@jfschmiechen/react-event-calendar": "^0.2.7",
     "aws-amplify": "^2.2.0",
     "core-js": "^3.5.0",
+    "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
     "react-scripts": "3.3.0"
