--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/react-fontawesome": "^0.1.8",
     "@jfschmiechen/react-event-calendar": "^0.2.7",
+    "deep-equal": "^1.1.0",
+    "date-holidays": "^1.4.2",
     "aws-amplify": "^2.2.0",
     "core-js": "^3.5.0",
     "moment": "^2.24.0",
