--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/react-fontawesome": "^0.1.8",
     "@jfschmiechen/react-event-calendar": "^0.2.7",
-    "deep-equal": "^1.1.0",
-    "date-holidays": "^1.4.2",
     "aws-amplify": "^2.2.0",
+    "bootstrap": "^4.4.1",
     "core-js": "^3.5.0",
+    "date-holidays": "^1.4.2",
+    "deep-equal": "^1.1.0",
     "moment": "^2.24.0",
     "react": "^16.12.0",
-    "react-bootstrap": "^0.32.1",
+    "react-bootstrap": "1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router-bootstrap": "^0.24.4",
