--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-redux": "^7.1.3",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "redux": "^4.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
