--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router-bootstrap": "^0.24.4",
-    "react-router-dom": "^4.2.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "redux": "^4.0.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=4200 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
