--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "react-select": "^3.0.8",
     "redux": "^4.0.4"
   },
   "scripts": {
