--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "deep-equal": "^1.1.0",
     "moment": "^2.24.0",
     "react": "^16.12.0",
+    "react-autosuggest": "^9.4.3",
     "react-bootstrap": "1.0.0-beta.16",
     "react-dom": "^16.12.0",
+    "react-geosuggest": "^2.12.1",
     "react-redux": "^7.1.3",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^5.1.2",
