--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^16.12.0",
     "react-autosuggest": "^9.4.3",
     "react-bootstrap": "1.0.0-beta.16",
+    "react-cookie": "^4.0.3",
     "react-dom": "^16.12.0",
     "react-geosuggest": "^2.12.1",
     "react-redux": "^7.1.3",
