--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/react-fontawesome": "^0.1.8",
-    "@jfschmiechen/react-event-calendar": "^0.2.7",
     "aws-amplify": "^2.2.0",
     "bootstrap": "^4.4.1",
     "core-js": "^3.5.0",
@@ -18,12 +17,14 @@
     "react-bootstrap": "1.0.0-beta.16",
     "react-cookie": "^4.0.3",
     "react-dom": "^16.12.0",
+    "react-facebook-login": "^4.1.1",
     "react-geosuggest": "^2.12.1",
     "react-redux": "^7.1.3",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "react-select": "^3.0.8",
+    "react-social-login-buttons": "^3.0.0",
     "redux": "^4.0.4"
   },
   "scripts": {
