--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "date-holidays": "^1.4.2",
     "deep-equal": "^1.1.0",
     "moment": "^2.24.0",
+    "rc-slider": "^9.2.1",
     "react": "^16.12.0",
     "react-autosuggest": "^9.4.3",
     "react-bootstrap": "1.0.0-beta.16",
