--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/react-fontawesome": "^0.1.8",
     "aws-amplify": "^2.2.0",
+    "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "core-js": "^3.5.0",
     "date-holidays": "^1.4.2",
