--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-scripts": "3.3.0",
     "react-select": "^3.0.8",
     "react-social-login-buttons": "^3.0.0",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "PORT=4200 react-scripts start",
