--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.5.0",
     "date-holidays": "^1.4.2",
     "deep-equal": "^1.1.0",
+    "dotenv": "^8.2.0",
     "http-proxy-middleware": "^1.0.1",
     "moment": "^2.24.0",
     "react": "^16.12.0",
