--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^16.12.0",
     "react-facebook-login": "^4.1.1",
     "react-geosuggest": "^2.12.1",
+    "react-popper": "^1.3.7",
     "react-redux": "^7.1.3",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^5.1.2",
