--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.12.1",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/react-fontawesome": "^0.1.8",
+    "@material-ui/core": "^4.9.7",
     "aws-amplify": "^2.2.0",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
@@ -16,6 +17,7 @@
     "dotenv": "^8.2.0",
     "http-proxy-middleware": "^1.0.1",
     "moment": "^2.24.0",
+    "notistack": "^0.9.9",
     "react": "^16.12.0",
     "react-autosuggest": "^9.4.3",
     "react-bootstrap": "1.0.0-beta.16",
