--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "react-redux": "^7.2.0",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.3.0",
+    "react-scripts": "^3.4.1",
     "react-select": "^3.1.0",
     "react-social-login-buttons": "^3.1.0",
     "redux": "^4.0.4",
