--- a/package.json
+++ b/package.json
@@ -1,47 +1,68 @@
 {
-  "name": "kazzenger-website",
-  "version": "1.0.1",
+  "name": "feriapp-website",
+  "version": "0.1.0",
   "private": true,
+  "homepage": "./",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.28",
-    "@fortawesome/free-brands-svg-icons": "^5.13.0",
-    "@fortawesome/free-solid-svg-icons": "^5.13.0",
-    "@fortawesome/react-fontawesome": "^0.1.9",
-    "@material-ui/core": "^4.9.14",
-    "aws-amplify": "^2.3.0",
-    "axios": "^0.19.2",
-    "bootstrap": "^4.5.0",
-    "components-extra": "^2.6.2",
-    "core-js": "^3.6.5",
-    "date-holidays": "^1.5.1",
-    "deep-equal": "^1.1.0",
-    "dotenv": "^8.2.0",
-    "http-proxy-middleware": "^1.0.3",
-    "moment": "^2.25.3",
-    "notistack": "^0.9.14",
-    "react": "^16.13.1",
-    "react-autosuggest": "^9.4.3",
-    "react-bootstrap": "1.0.0-beta.16",
-    "react-cookie": "^4.0.3",
-    "react-dom": "^16.13.1",
-    "react-facebook-login": "^4.1.1",
-    "react-geosuggest": "^2.13.0",
-    "react-popper": "^1.3.7",
-    "react-redux": "^7.2.0",
-    "react-router-bootstrap": "^0.24.4",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.1",
-    "react-select": "^3.1.0",
-    "react-social-login-buttons": "^3.1.0",
-    "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0",
-    "styled-components": "^5.1.0"
-  },
+      "@fortawesome/fontawesome-svg-core": "^1.2.28",
+      "@fortawesome/free-brands-svg-icons": "^5.13.0",
+      "@fortawesome/free-solid-svg-icons": "^5.13.0",
+      "@fortawesome/react-fontawesome": "^0.1.9",
+      "@material-ui/core": "^4.9.14",
+      "aws-amplify": "^2.3.0",
+      "axios": "^0.19.2",
+      "bootstrap": "^4.5.0",
+      "components-extra": "^2.6.2",
+      "core-js": "^3.6.5",
+      "date-holidays": "^1.5.1",
+      "deep-equal": "^1.1.0",
+      "dotenv": "^8.2.0",
+      "http-proxy-middleware": "^1.0.3",
+      "moment": "^2.25.3",
+      "notistack": "^0.9.14",
+      "react": "^16.13.1",
+      "react-autosuggest": "^9.4.3",
+      "react-bootstrap": "1.0.0-beta.16",
+      "react-cookie": "^4.0.3",
+      "react-dom": "^16.13.1",
+      "react-facebook-login": "^4.1.1",
+      "react-geosuggest": "^2.13.0",
+      "react-popper": "^1.3.7",
+      "react-redux": "^7.2.0",
+      "react-router-bootstrap": "^0.24.4",
+      "react-router-dom": "^5.2.0",
+      "react-scripts": "^3.4.1",
+      "react-select": "^3.1.0",
+      "react-social-login-buttons": "^3.1.0",
+      "redux": "^4.0.4",
+      "redux-thunk": "^2.3.0",
+      "styled-components": "^5.1.0"
+    },
   "scripts": {
-    "start": "PORT=4200 react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-scripts start",
+    "build": "NODE_ENV=production INLINE_RUNTIME_CHUNK=false react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "lint": "eslint src --ext .js",
+    "coverage": "yarn test --coverage --watchAll=false",
+    "dev:unit-watch": "yarn test",
+    "dev:mock-server": "mock-server --delay 200 --watch --require @babel/register",
+    "dev:styleguide": "styleguidist server",
+    "dev": "npm-run-all -p dev:** start",
+    "styleguide:build": "styleguidist build",
+    "update-docker-version": "sed -i.bck \"s|version=\\\"[0-9]*\\.[0-9]*\\.[0-9]*.*\\\"|version=\\\"${npm_package_version}\\\"|\" Dockerfile",
+    "version": "npm run update-docker-version && rm -fr Dockerfile.bck && git add Dockerfile"
+  },
+  "proxy": "http://localhost:3456",
+  "standard-version": {
+    "skip": {
+      "bump": true,
+      "tag": true
+    }
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm-run-all lint coverage"
+    }
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -50,6 +71,7 @@
     "production": [
       ">0.2%",
       "not dead",
+      "not ie <= 11",
       "not op_mini all"
     ],
     "development": [
@@ -59,6 +81,21 @@
     ]
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-free": "^5.13.0"
+    "@babel/register": "^7.14.5",
+    "@staticdeploy/mock-server": "^2.0.0",
+    "@testing-library/react-hooks": "^3.7.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "eslint-config-react-app": "^5.2.1",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-config-standard-react": "^9.2.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-standard": "^4.0.2",
+    "husky": "^4.3.8",
+    "npm-run-all": "^4.1.5",
+    "react-styleguidist": "^11.1.6",
+    "standard-version": "^9.3.0"
   }
 }
