--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ include:
     COMMIT_SHA_FILEPATH: /etc/nginx/commit.sha
 
 default:
-  image: node:12.19.0-alpine
+  image: node:fermium-alpine
 
 variables:
   IMAGE_NAME: feriapp/feriapp-website
