--- a/package.json
+++ b/package.json
@@ -4,42 +4,42 @@
   "private": true,
   "homepage": "./",
   "dependencies": {
-      "@fortawesome/fontawesome-svg-core": "^1.2.28",
-      "@fortawesome/free-brands-svg-icons": "^5.13.0",
-      "@fortawesome/free-solid-svg-icons": "^5.13.0",
-      "@fortawesome/react-fontawesome": "^0.1.9",
-      "@material-ui/core": "^4.9.14",
-      "aws-amplify": "^2.3.0",
-      "axios": "^0.19.2",
-      "bootstrap": "^4.5.0",
-      "components-extra": "^2.6.2",
-      "core-js": "^3.6.5",
-      "date-holidays": "^1.5.1",
-      "deep-equal": "^1.1.0",
-      "dotenv": "^8.2.0",
-      "http-proxy-middleware": "^1.0.3",
-      "moment": "^2.25.3",
-      "notistack": "^0.9.14",
-      "react": "^16.13.1",
-      "react-autosuggest": "^9.4.3",
-      "react-bootstrap": "1.0.0-beta.16",
-      "react-cookie": "^4.0.3",
-      "react-dom": "^16.13.1",
-      "react-facebook-login": "^4.1.1",
-      "react-geosuggest": "^2.13.0",
-      "react-popper": "^1.3.7",
-      "react-redux": "^7.2.0",
-      "react-router-bootstrap": "^0.24.4",
-      "react-router-dom": "^5.2.0",
-      "react-scripts": "^3.4.1",
-      "react-select": "^3.1.0",
-      "react-social-login-buttons": "^3.1.0",
-      "redux": "^4.0.4",
-      "redux-thunk": "^2.3.0",
-      "styled-components": "^5.1.0"
-    },
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-brands-svg-icons": "^5.13.0",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.9",
+    "@material-ui/core": "^4.9.14",
+    "aws-amplify": "^2.3.0",
+    "axios": "^0.19.2",
+    "bootstrap": "5.0.2",
+    "components-extra": "^2.6.2",
+    "core-js": "^3.6.5",
+    "date-holidays": "^1.5.1",
+    "deep-equal": "^1.1.0",
+    "dotenv": "^8.2.0",
+    "http-proxy-middleware": "^1.0.3",
+    "moment": "^2.25.3",
+    "notistack": "^0.9.14",
+    "react": "^16.13.1",
+    "react-autosuggest": "^9.4.3",
+    "react-bootstrap": "^2.0.0-beta.4",
+    "react-cookie": "^4.0.3",
+    "react-dom": "^16.13.1",
+    "react-facebook-login": "^4.1.1",
+    "react-geosuggest": "^2.13.0",
+    "react-popper": "^1.3.7",
+    "react-redux": "^7.2.0",
+    "react-router-bootstrap": "^0.24.4",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^3.4.1",
+    "react-select": "^3.1.0",
+    "react-social-login-buttons": "^3.1.0",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^5.1.0"
+  },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=4200 react-scripts start",
     "build": "NODE_ENV=production INLINE_RUNTIME_CHUNK=false react-scripts build",
     "test": "react-scripts test",
     "lint": "eslint src --ext .js",
@@ -52,7 +52,7 @@
     "update-docker-version": "sed -i.bck \"s|version=\\\"[0-9]*\\.[0-9]*\\.[0-9]*.*\\\"|version=\\\"${npm_package_version}\\\"|\" Dockerfile",
     "version": "npm run update-docker-version && rm -fr Dockerfile.bck && git add Dockerfile"
   },
-  "proxy": "http://localhost:3456",
+  "proxy": "https://feriapp.test.mia-platform.eu",
   "standard-version": {
     "skip": {
       "bump": true,
