--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -41,7 +41,7 @@ http {
   tcp_nopush on;
   tcp_nodelay on;
   sendfile on;
-
+  gzip on;
   include /etc/nginx/mime.types;
   include /etc/nginx/filehandle_cache.conf;
   include /etc/nginx/real_ip.conf;
