--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "react-social-login-buttons": "^3.1.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
+    "source-map-explorer": "^2.5.2",
     "styled-components": "^5.1.0"
   },
   "scripts": {
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
     "start": "PORT=4200 react-scripts start",
     "build": "NODE_ENV=production INLINE_RUNTIME_CHUNK=false react-scripts build",
     "test": "react-scripts test",
