--- a/package.json
+++ b/package.json
@@ -41,9 +41,9 @@
   },
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
-    "start": "PORT=4200 react-scripts start",
-    "build": "NODE_ENV=production INLINE_RUNTIME_CHUNK=false react-scripts build",
-    "test": "react-scripts test",
+    "start": "PORT=4200 rescripts start",
+    "build": "NODE_ENV=production INLINE_RUNTIME_CHUNK=false rescripts build",
+    "test": "rescripts test",
     "lint": "eslint src --ext .js",
     "coverage": "yarn test --coverage --watchAll=false",
     "dev:unit-watch": "yarn test",
@@ -84,6 +84,7 @@
   },
   "devDependencies": {
     "@babel/register": "^7.14.5",
+    "@rescripts/cli": "^0.0.16",
     "@staticdeploy/mock-server": "^2.0.0",
     "@testing-library/react-hooks": "^3.7.0",
     "enzyme": "^3.11.0",
