--- a/nginx/conf.d/website.conf
+++ b/nginx/conf.d/website.conf
@@ -13,7 +13,7 @@
 # limitations under the License.
 #
 
-location / {
+location /bridges {
   include /etc/nginx/security.d/cross-site_script.conf;
   # add_header 'Content-Security-Policy' "default-src 'self'; script-src 'self' 'unsafe-eval'; object-src 'none'; style-src 'self' 'unsafe-inline'; img-src 'self'; font-src 'self'" always;
 
