--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "feriapp-website",
   "version": "0.2.6",
   "private": true,
-  "homepage": "./",
+  "homepage": ".",
   "dependencies": {
     "@auth0/auth0-react": "^1.6.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
